--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=todoapp
-spring.datasource.url=jdbc:mysql://localhost:3306/todo-app
+spring.datasource.url=jdbc:mysql://localhost:3306/todoapp
 spring.datasource.username=root
 spring.datasource.password=Seto@1966
 spring.jpa.hibernate.ddl-auto=update
